<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res/com.netlynxtech.noiselynx"
    android:id="@+id/rl_monitoring_site_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card"
    android:orientation="vertical" >

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/tvID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone"
        font:customFont="roboto.ttf" />

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/tvLocationLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone"
        font:customFont="roboto.ttf" />

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/tvLocationLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone"
        font:customFont="roboto.ttf" />

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvCurrentDBA"
        android:layout_alignBottom="@+id/tvCurrentDBA"
        android:layout_toRightOf="@+id/tvCurrentDBA"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:text="@string/dba"
        android:textAppearance="?android:attr/textAppearanceMedium"
        font:customFont="roboto.ttf" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignBottom="@+id/tvDevice"
        android:layout_alignLeft="@+id/tvTime"
        android:background="#33b5e5"
        android:padding="8dp" />

    <TextView
        android:id="@+id/tvCurrentDBA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvTime"
        android:paddingBottom="1dp"
        android:text="000"
        android:textSize="40dp"
        android:textStyle="bold" />

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/tvDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="5dp"
        android:text="TextView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        font:customFont="roboto.ttf" />

    <View
        android:id="@+id/view1"
        android:layout_width="10dip"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/separator"
        android:layout_alignTop="@+id/tvDevice"
        android:background="#FF00FF27" />

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/separator"
        android:gravity="right"
        android:paddingRight="13dp"
        android:text="TextView"
        font:customFont="roboto.ttf" />

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/tvLEQ12hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/tvLEQ1hour"
        android:layout_toLeftOf="@+id/textView4"
        android:text="000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        font:customFont="roboto.ttf" />

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurrentDBA"
        android:layout_toLeftOf="@+id/view1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/dba"
        android:textAppearance="?android:attr/textAppearanceMedium"
        font:customFont="roboto.ttf" />

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:paddingLeft="5dp"
        android:text="@string/dba"
        android:textAppearance="?android:attr/textAppearanceMedium"
        font:customFont="roboto.ttf" />

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/tvLEQ1hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_toLeftOf="@+id/textView1"
        android:text="000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        font:customFont="roboto.ttf" />

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvLEQ12hour"
        android:layout_alignBottom="@+id/tvLEQ12hour"
        android:layout_toLeftOf="@+id/tvLEQ12hour"
        android:paddingRight="5dp"
        android:text="@string/leq_twelve_hour"
        android:textAppearance="?android:attr/textAppearanceMedium"
        font:customFont="roboto.ttf" />

    <com.netlynxtech.noiselynx.classes.TextViewPlus
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/leq_one_hour"
        android:textAppearance="?android:attr/textAppearanceMedium"
        font:customFont="roboto.ttf" />

</RelativeLayout>